--- a/flourish_reports/templates/flourish_reports/home.html
+++ b/flourish_reports/templates/flourish_reports/home.html
@@ -15,22 +15,58 @@
 	  <p>Select a tab for the report you want.</p>
 	
 	  <ul class="nav nav-tabs">
-	    <li class="active"><a data-toggle="tab" href="#home">Recruiting</a></li>
-	    <li><a data-toggle="tab" href="#menu1">Management</a></li>
-	    <li><a data-toggle="tab" href="#menu2">Menu 2</a></li>
+	    <li class="active"><a data-toggle="tab" href="#recruitment">Recruitment</a></li>
+	    <li><a data-toggle="tab" href="#management">Management</a></li>
+	    <li><a data-toggle="tab" href="#enrolment">Enrolments</a></li>
 	    <li><a data-toggle="tab" href="#menu3">Menu 3</a></li>
 	  </ul>
 	
 	  <div class="tab-content">
-	    <div id="home" class="tab-pane fade in active">
-	      <h3>HOME</h3>
-	      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+	    <div id="recruitment" class="tab-pane fade in active">
+	    <br>
+	    <div class="panel panel-info">
+	      <div class="panel-heading"><h4>FLOURISH Recruitment Productivity Report</h4></div>
+	      <div class="panel-body">
+		      <table class="table table-hover">
+			    <thead>
+			      <tr>
+			        <th>Staff Member Name</th>
+			        <th># of attempted participants contacts</th>
+			        <th># of attempted contacts</th>
+			        <th># reached</th>
+			        <th># accepting</th>
+			        <th>conversion</th>
+			        <th>conversion %</th>
+			      </tr>
+			    </thead>
+			    <tbody>
+			    {% for r in recruitment.1 %}
+			      <tr>
+			      	{% for v in r %}
+			        <td>{{v}}</td>
+			        {% endfor %}
+			      </tr>
+			      {% endfor %}
+			      <tr>
+			        <td><b>Totals </b></td>
+			        <td><b>{{ recruitment.0.0 }}</b></td>
+			        <td><b>{{ recruitment.0.1 }}</b></td>
+			        <td><b>{{ recruitment.0.2 }}</b></td>
+			        <td><b>{{ recruitment.0.3 }}</b></td>
+			        <td><b>{{ recruitment.0.4 }}</b></td>
+			        <td><b></b></td>
+			      </tr>
+
+			    </tbody>
+			  </table>
+			</div>
 	    </div>
-	    <div id="menu1" class="tab-pane fade">
+	    </div>
+	    <div id="management" class="tab-pane fade">
 	      <h3>Menu 1</h3>
 	      <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
 	    </div>
-	    <div id="menu2" class="tab-pane fade">
+	    <div id="enrolment" class="tab-pane fade">
 	      <h3>Menu 2</h3>
 	      <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.</p>
 	    </div>
