--- a/flourish_reports/templates/flourish_reports/home.html
+++ b/flourish_reports/templates/flourish_reports/home.html
@@ -46,7 +46,6 @@
 	    <div class="panel panel-info">
 	      <div class="panel-heading">
 	      <h4>FLOURISH Recruitment Productivity Report</h4>
-	      
 	      </div>
 	      <div class="panel-body">
 		      <table class="table table-hover">
@@ -87,28 +86,32 @@
 	    <div id="management" class="tab-pane fade">
 	      <h3>Management report</h3>
 	      <br>
-	      <form method="post">
-		    {% csrf_token %}
-		    <div class="form-row">
-		      <div class="form-group col-md-2 mb-0">
-		        {{ form.start_date|as_crispy_field }}
-		      </div>
-		      <div class="form-group col-md-2 mb-0">
-		        {{ form.end_date|as_crispy_field }}
-		      </div>
-		      <div class="form-group col-md-2 mb-0">
-		      <button class="btn btn-primary" type="submit" value="Submit" name="mdownload_report" ><i class="fa fa-lg fa-floppy-o"></i> download report</button> 
-		      </div>
-		    </div>
-		  </form>
+	      <div class="panel panel-info">
+		     <div class="panel-heading">Generate report</div>
+		     <div class="panel-body">
+		     	<form method="post">
+				    {% csrf_token %}
+				    <div class="form-row">
+				      <div class="form-group col-md-2 mb-0">
+				        {{ form.start_date|as_crispy_field }}
+				      </div>
+				      <div class="form-group col-md-2 mb-0">
+				        {{ form.end_date|as_crispy_field }}
+				      </div>
+				      <div class="form-group col-md-2 mb-0">
+				      <button class="btn btn-primary" type="submit" value="Submit" name="mdownload_report" ><i class="fa fa-lg fa-floppy-o"></i> download report</button> 
+				      </div>
+				    </div>
+				  </form>	
+		     </div>
+		   </div>
 		 <br>
-	      <div class="raw">
-			<div id="div-home-right" class="col-md-12">
 			{% if management_report_downloads %}
-			<div class="panel panel-default">
+			<div class="panel panel-info">
 				<div class="panel-heading">
 					<h4>Management Report Downloads</h4>
 				</div>
+				<div class="panel-body">
 				<table id="item-identifiers" class="table table-striped table-bordered" cellspacing="0" width="100%">
 					<thead>
 						<tr>
@@ -130,7 +133,11 @@
 						{% for download in management_report_downloads %}
 						<tr>
 					 		<td>{{ download.export_identifier }}</td>
-					 		<td><a href={{ download.file_url }}><i class="fa fa-download fa-sm"></i> file download</a></td>
+					 		<td>
+					 			{% if download.document.url %}
+					 				<a href={{ download.file_url }}><i class="fa fa-download fa-sm"></i> file download</a>
+					 			{% endif %}
+					 		</td>
 					 		<td>{{ download.start_date }} & {{ download.end_date }}</td>
 					 		<td>{{ download.uploaded_at }}</td>
 						</tr>
@@ -139,7 +146,7 @@
 				</table>
 			{% endif %}
 			</div>
-	    </div>
+		</div>
 	    <div id="enrolment" class="tab-pane fade">
 	      <h3>Enrolment report</h3>
 	      <p>Still under construction.</p>
@@ -148,6 +155,6 @@
 	      <h3>Lab report</h3>
 	      <p>Still under construction.</p>
 	    </div>
-	  </div>
+</div>
 </div>
 {% endblock main %}
