--- a/flourish_reports/templates/flourish_reports/home.html
+++ b/flourish_reports/templates/flourish_reports/home.html
@@ -51,13 +51,13 @@
 		      <table class="table table-hover">
 			    <thead>
 			      <tr>
-			        <th>Staff Member Name</th>
-			        <th># of attempted participants contacts</th>
-			        <th># of attempted contacts</th>
-			        <th># reached</th>
-			        <th># accepting</th>
-			        <th>conversion</th>
-			        <th>conversion %</th>
+			        <th>Staff Member</th>
+			        <th>Total contacted</th>
+			        <th>Total successful calls</th>
+			        <th>Total unsuccessful calls</th>
+			        <th>Total participants accepting</th>
+			        <th>Conversion</th>
+			        <th>Conversion %</th>
 			      </tr>
 			    </thead>
 			    <tbody>
