--- a/flourish_reports/templates/flourish_reports/enrolment/cohort_c.html
+++ b/flourish_reports/templates/flourish_reports/enrolment/cohort_c.html
@@ -10,8 +10,9 @@
 		  </thead>
 		  <tbody>
 		    <tr>
-		      <td>0</td>
-		      <td>0</td>
+		      {% for key, value in cohort_c.items %}
+			    <td>{{ value }}</td>
+			  {% endfor %}
 		    </tr>
 		  </tbody>
 		</table>
