--- a/flourish_reports/templates/flourish_reports/recruitment/user_report.html
+++ b/flourish_reports/templates/flourish_reports/recruitment/user_report.html
@@ -1,9 +1,12 @@
 {% load crispy_forms_tags %}
+<p><h4>User Report</h4></p>
 <div class="panel panel-info">
 	<div class="panel-heading">
 		{% csrf_token %}
-		<span class="pull-right">{% crispy form %}</span>
-		<h4>Recruiter Recruitment Report</h4>
+		<span class="pull-right">
+			{% crispy form %}
+		</span>
+		<button type="button" class="btn btn-sm btn-default" data-toggle="modal" data-target="#myModal">View Downloads</button>
 	</div>
 	<div class="panel-body">
 		<table class="table table-hover">
@@ -39,3 +42,64 @@
 		</table>
 	</div>
 </div>
+<!-- Modal -->
+ <div class="modal fade" id="myModal" role="dialog">
+   <div class="modal-dialog">
+     <div class="modal-content">
+       <div class="modal-header">
+         <button type="button" class="close" data-dismiss="modal">&times;</button>
+         <h4 class="modal-title">Download generated exports</h4>
+       </div>
+       <div class="modal-body">
+         
+         {% if recruitment_downloads %}
+			<div class="panel panel-info">
+				<div class="panel-heading">
+					<h4>Recruitment Report Downloads</h4>
+				</div>
+				<div class="panel-body">
+				<table id="item-identifiers" class="table table-striped table-bordered" cellspacing="0" width="100%">
+					<thead>
+						<tr>
+							<th>Export identifier</th>
+							<th>Document</th>
+							<th>Report data range</th>
+							<th>Datetime generated</th>
+						</tr>
+					</thead>
+					<tfoot>
+						<tr>
+							<th>Export identifier</th>
+							<th>Document</th>
+							<th>Report data range</th>
+							<th>Datetime generated</th>
+						</tr>
+					</tfoot>
+					<tbody>
+					{% for download in recruitment_downloads %}
+						<tr>
+							<td>{{ download.export_identifier }}</td>
+					 		<td>
+					 			{% if download.document.url %}
+					 				<a href={{ download.file_url }}><i class="fa fa-download fa-sm"></i> file download</a>
+					 			{% endif %}
+					 		</td>
+					 		<td>{{ download.start_date }} & {{ download.end_date }}</td>
+					 		<td>{{ download.uploaded_at }}</td>
+						</tr>
+					{% endfor %}
+					</tbody>
+				</table>
+			</div>
+		</div>
+		{% else %}
+			No Downloaded reports
+		{% endif %}
+
+       </div>
+       <div class="modal-footer">
+         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+       </div>
+     </div>
+   </div>
+ </div>
