Changed labels for secondary aims

--- a/flourish_reports/templates/flourish_reports/enrolment/secondary_aims.html
+++ b/flourish_reports/templates/flourish_reports/enrolment/secondary_aims.html
@@ -4,8 +4,8 @@
 		<table class="table">
 		  <thead>
 		    <tr>
-		      <th scope="col">WLHIV (Mashi). Target: 100</th>
-		      <th scope="col">HIV - (Tshipidi). Target: 100</th>
+		      <th scope="col">Women Living With HIV. Target: 100</th>
+		      <th scope="col">Women Living Without HIV. Target: 100</th>
 		    </tr>
 		  </thead>
 		  <tbody>
