3 calls are now equavalent to 1 and headers were changed

--- a/flourish_reports/templates/flourish_reports/recruitment/user_report.html
+++ b/flourish_reports/templates/flourish_reports/recruitment/user_report.html
@@ -13,12 +13,12 @@
 			<thead>
 				<tr>
 			        <th>Staff Member</th>
-			        <th>Total contacted</th>
-			        <th>Total successful calls</th>
-			        <th>Total unsuccessful calls</th>
-			        <th>Total participants accepting</th>
-			        <th>Conversion</th>
-			        <th>Conversion %</th>
+			        <th>Total Contacted</th>
+			        <th>Total Successful calls</th>
+			        <th>Total Unsuccessful calls</th>
+			        <th>Total Appointments</th>
+			        <th>Subject Consented</th>
+			        <th>Subject Consented (%)</th>
 				</tr>
 			</thead>
 			<tbody>
