--- a/flourish_reports/templates/flourish_reports/recruitment/user_report.html
+++ b/flourish_reports/templates/flourish_reports/recruitment/user_report.html
@@ -1,105 +1,108 @@
 {% load crispy_forms_tags %}
 <p><h4>User Report</h4></p>
 <div class="panel panel-info">
-	<div class="panel-heading">
-		{% csrf_token %}
-		<span class="pull-right">
+    <div class="panel-heading">
+        {% csrf_token %}
+        <span class="pull-right">
 			{% crispy form %}
 		</span>
-		<button type="button" class="btn btn-sm btn-default" data-toggle="modal" data-target="#myModal">View Downloads</button>
-	</div>
-	<div class="panel-body">
-		<table class="table table-hover">
-			<thead>
-				<tr>
-			        <th>Staff Member</th>
-			        <th>Total Contacted</th>
-			        <th>Total Successful calls</th>
-			        <th>Total Unsuccessful calls</th>
-			        <th>Total Appointments</th>
-			        <th>Subject Consented</th>
-			        <th>Subject Consented (%)</th>
-				</tr>
-			</thead>
-			<tbody>
-				{% for r in recruitment.1 %}
-				<tr>
-					{% for v in r %}
-					<td>{{v}}</td>
-					{% endfor %}
-				</tr>
-				{% endfor %}
-				<tr>
-			        <td><b>Totals </b></td>
-			        <td><b>{{ recruitment.0.0 }}</b></td>
-			        <td><b>{{ recruitment.0.1 }}</b></td>
-			        <td><b>{{ recruitment.0.2 }}</b></td>
-			        <td><b>{{ recruitment.0.3 }}</b></td>
-			        <td><b>{{ recruitment.0.4 }}</b></td>
-			        <td><b></b></td>
-				</tr>
-			</tbody>
-		</table>
-	</div>
+        <button type="button" class="btn btn-sm btn-default" data-toggle="modal" data-target="#myModal">View Downloads
+        </button>
+    </div>
+    <div class="panel-body">
+        <table class="table table-hover">
+            <thead>
+            <tr>
+                <th>Staff Member</th>
+                <th>Total Contacted</th>
+                <th>Total Successful calls</th>
+                <th>Total Unsuccessful calls</th>
+                <th>Total Appointments</th>
+                <th>Subject Consented</th>
+                <th>Subject Consented (%)</th>
+            </tr>
+            </thead>
+            <tbody>
+            {% for r in recruitment.1 %}
+                <tr>
+                    {% for v in r %}
+                        <td>{{ v }}</td>
+                    {% endfor %}
+                </tr>
+            {% endfor %}
+            <tr>
+                <td><b>Totals </b></td>
+                <td><b>{{ recruitment.0.0 }}</b></td>
+                <td><b>{{ recruitment.0.1 }}</b></td>
+                <td><b>{{ recruitment.0.2 }}</b></td>
+                <td><b>{{ recruitment.0.3 }}</b></td>
+                <td><b>{{ recruitment.0.4 | floatformat:3 }}</b></td>
+                <td><b></b></td>
+            </tr>
+            </tbody>
+        </table>
+    </div>
 </div>
 <!-- Modal -->
- <div class="modal fade" id="myModal" role="dialog">
-   <div class="modal-dialog">
-     <div class="modal-content">
-       <div class="modal-header">
-         <button type="button" class="close" data-dismiss="modal">&times;</button>
-         <h4 class="modal-title">Download generated exports</h4>
-       </div>
-       <div class="modal-body">
-         
-         {% if recruitment_downloads %}
-			<div class="panel panel-info">
-				<div class="panel-heading">
-					<h4>Recruitment Report Downloads</h4>
-				</div>
-				<div class="panel-body">
-				<table id="item-identifiers" class="table table-striped table-bordered" cellspacing="0" width="100%">
-					<thead>
-						<tr>
-							<th>Export identifier</th>
-							<th>Document</th>
-							<th>Report data range</th>
-							<th>Datetime generated</th>
-						</tr>
-					</thead>
-					<tfoot>
-						<tr>
-							<th>Export identifier</th>
-							<th>Document</th>
-							<th>Report data range</th>
-							<th>Datetime generated</th>
-						</tr>
-					</tfoot>
-					<tbody>
-					{% for download in recruitment_downloads %}
-						<tr>
-							<td>{{ download.export_identifier }}</td>
-					 		<td>
-					 			{% if download.document.url %}
-					 				<a href={{ download.file_url }}><i class="fa fa-download fa-sm"></i> file download</a>
-					 			{% endif %}
-					 		</td>
-					 		<td>{{ download.start_date }} & {{ download.end_date }}</td>
-					 		<td>{{ download.uploaded_at }}</td>
-						</tr>
-					{% endfor %}
-					</tbody>
-				</table>
-			</div>
-		</div>
-		{% else %}
-			No Downloaded reports
-		{% endif %}
+<div class="modal fade" id="myModal" role="dialog">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                <h4 class="modal-title">Download generated exports</h4>
+            </div>
+            <div class="modal-body">
 
-       </div>
-       <div class="modal-footer">
-         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-       </div>
-     </div>
-   </div>
- </div>
+                {% if recruitment_downloads %}
+                    <div class="panel panel-info">
+                        <div class="panel-heading">
+                            <h4>Recruitment Report Downloads</h4>
+                        </div>
+                        <div class="panel-body">
+                            <table id="item-identifiers" class="table table-striped table-bordered" cellspacing="0"
+                                   width="100%">
+                                <thead>
+                                <tr>
+                                    <th>Export identifier</th>
+                                    <th>Document</th>
+                                    <th>Report data range</th>
+                                    <th>Datetime generated</th>
+                                </tr>
+                                </thead>
+                                <tfoot>
+                                <tr>
+                                    <th>Export identifier</th>
+                                    <th>Document</th>
+                                    <th>Report data range</th>
+                                    <th>Datetime generated</th>
+                                </tr>
+                                </tfoot>
+                                <tbody>
+                                {% for download in recruitment_downloads %}
+                                    <tr>
+                                        <td>{{ download.export_identifier }}</td>
+                                        <td>
+                                            {% if download.document.url %}
+                                                <a href={{ download.file_url }}><i class="fa fa-download fa-sm"></i>
+                                                    file download</a>
+                                            {% endif %}
+                                        </td>
+                                        <td>{{ download.start_date }} & {{ download.end_date }}</td>
+                                        <td>{{ download.uploaded_at }}</td>
+                                    </tr>
+                                {% endfor %}
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                {% else %}
+                    No Downloaded reports
+                {% endif %}
+
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+            </div>
+        </div>
+    </div>
+</div>
