--- a/flourish_reports/templates/flourish_reports/recruitment/user_report.html
+++ b/flourish_reports/templates/flourish_reports/recruitment/user_report.html
@@ -36,7 +36,7 @@
                 <td><b>{{ recruitment.0.1 }}</b></td>
                 <td><b>{{ recruitment.0.2 }}</b></td>
                 <td><b>{{ recruitment.0.3 }}</b></td>
-                <td><b>{{ recruitment.0.4 | floatformat:3 }}</b></td>
+                <td><b>{{ recruitment.0.4 }}</b></td>
                 <td><b></b></td>
             </tr>
             </tbody>
