ADDED: Extra columns and how data is captured

--- a/flourish_reports/templates/flourish_reports/recruitment/prev_study_report.html
+++ b/flourish_reports/templates/flourish_reports/recruitment/prev_study_report.html
@@ -9,12 +9,14 @@
 	<div class="panel-body">
 		<table class="table table-hover">
 			<thead>
-				<tr>
+				<tr style="font-size: 9pt">
 			        <th>Prev Study</th>
-			        <th>Attempts</th>
-			        <th>Pending</th>
-			        <th>Unable to reach</th>
-			        <th>Decline/Uninterested</th>
+			        <th>Total Work <div style="color: blue; font-weight: normal; font-size: 7pt">Total people to be contacted</div></th>
+                    <th>Non Randomized <div style="color: blue; font-weight: normal; font-size: 7pt">Not yet randomized</div></th>
+                    <th>Randomized <div style="color: blue; font-weight: normal; font-size: 7pt">Randomized and pending recruitment</div></th>
+			        <th>Attempts </th>
+			        <th>Unable to reach </th>
+			        <th>Decline/Uninterested </th>
 			        <th>Thinking</th>
 			        <th>Consented</th>
 				</tr>
