--- a/flourish_reports/templates/flourish_reports/recruitment/prev_study_report.html
+++ b/flourish_reports/templates/flourish_reports/recruitment/prev_study_report.html
@@ -11,7 +11,8 @@
 			<thead>
 				<tr style="font-size: 9pt">
 			        <th>Prev Study</th>
-			        <th>Total Work <div style="color: blue; font-weight: normal; font-size: 7pt">Total people to be contacted</div></th>
+			        <th>Total Participants<div style="color: blue; font-weight: normal; font-size: 7pt">Previous Study Participants</div></th>
+			        <th>Worklist Participants <div style="color: blue; font-weight: normal; font-size: 7pt">Randomized + Non-randomized</div></th>
                     <th>Non Randomized <div style="color: blue; font-weight: normal; font-size: 7pt">Not yet randomized</div></th>
                     <th>Randomized <div style="color: blue; font-weight: normal; font-size: 7pt">Randomized and pending recruitment</div></th>
 			        <th>Attempts </th>
