add continued contact reports

--- a/flourish_reports/templates/flourish_reports/recruitment/prev_study_report.html
+++ b/flourish_reports/templates/flourish_reports/recruitment/prev_study_report.html
@@ -15,6 +15,7 @@
 			        <th>Worklist Participants <div style="color: blue; font-weight: normal; font-size: 7pt">Randomized + Non-randomized</div></th>
                     <th>Non Randomized <div style="color: blue; font-weight: normal; font-size: 7pt">Not yet randomized</div></th>
                     <th>Randomized <div style="color: blue; font-weight: normal; font-size: 7pt">Randomized and pending recruitment</div></th>
+                    <th>Continued Contact</th>
 			        <th>Attempts </th>
 			        <th>Unable to reach </th>
 			        <th>Decline/Uninterested </th>
